--- a/МДК 01.01 Разработка программных модулей/wpf/MainWindow.xaml
+++ b/МДК 01.01 Разработка программных модулей/wpf/MainWindow.xaml
@@ -1,29 +1,51 @@
-﻿<Window x:Class="wpf.MainWindow"
+<Window x:Class="Popovbdas.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:wpf"
+        xmlns:local="clr-namespace:Popovbdas"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid ShowGridLines ="True" HorizontalAlignment="Center" VerticalAlignment="Center">
+        Title="MainWindow" MinHeight="450" MinWidth="800">
+
+    <Grid ShowGridLines="True" RenderTransformOrigin="0.5,0.5">
+        <Grid.Background>
+            <ImageBrush ImageSource="Resourse/large.58f1bdeda1c5c_.jpg.91c33c120ad86a4dbf2c50dd44d00890.jpg" Opacity="0.5">
+                <ImageBrush.RelativeTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleY="1" ScaleX="1"/>
+                        <SkewTransform AngleY="0" AngleX="0"/>
+                        <RotateTransform Angle="0"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </ImageBrush.RelativeTransform>
+            </ImageBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="27*">
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
 
-            </ColumnDefinition>
-            <ColumnDefinition Width="29*"/>
-            <ColumnDefinition Width="0*">
-
-            </ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
 
-            </RowDefinition>
-            <RowDefinition>
-
-            </RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Grid.ColumnSpan="3" Grid.RowSpan="2">Это абоба</TextBlock>
-    </Grid >
+        <Image Grid.Column="1" Grid.Row="1" Source="/Resourse/large.58f1bdeda1c5c_.jpg.91c33c120ad86a4dbf2c50dd44d00890.jpg" />
+        <StackPanel Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Width="100" Height="50" TextAlignment="Center">
+            <TextBlock.Background>
+                <SolidColorBrush Color="#FFF0DD66" Opacity="0.5"/>
+            </TextBlock.Background>Это пример
+        </TextBlock>
+        <TextBlock Width="100" Height="50" TextAlignment="Center">
+            <TextBlock.Background>
+                <SolidColorBrush Color="#FFF0DD66" Opacity="0.5"/>
+            </TextBlock.Background>Это пример
+        </TextBlock>
+        </StackPanel>
+        
+
+
+    </Grid>
+
 </Window>
